--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    
-    <script src="./js/mokepon.js"></script>
-    <link rel="stylesheet" href="./styles.css">
+    <script src="mokepon.js"></script>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8" />
 <title>mokepon</title>
 
