modificaciones del dia 12-1-23, cambios al boton reiniciar y error de texto en la pantalla principal

--- a/index.html
+++ b/index.html
@@ -48,21 +48,19 @@
         <h2>Seleccione su ataque:</h2>
 
         <div class="botonera-ataques">
-
             <button class="boton-fuego" id="boton-fuego">Fuego🔥</button>
             <button class="boton-agua" id="boton-agua">Agua 💧</button>
             <button class="boton-tierra" id="boton-tierra">Tierra 🌱</button>
         </div>
 
         <div class="seccion-mensajes">
-            <section id="mensajes">
-                <p id="resultado"></p>
+            <p id="resultado">No mueras 💀 </p>                           
             </section>
-
             <Section id="reiniciar">
                 <button class="boton-reiniciar" id="boton-reiniciar">Reiniciar 🔃 </button>
             </Section>
         </div>
+        <section>
         <div>
             <div id="ataque-del-jugador"></div>
             <div id="ataque-del-oponente"></div>
