--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         </div>
         <section>
         <div>
-            <div id="ataque-del-jugador"></div>
-            <div id="ataque-del-oponente"></div>
+            <div style="block" id="ataque-del-jugador"></div>
+            <div style="block" id="ataque-del-oponente"></div>
             <p>Tu Personaje <span id="personaje-jugador"></span> tiene <span id="vida-jugador">3</span> vidas</p>
             <p> El adversario <span id="personaje-oponente"></span> tiene <span id="vida-oponente">3</span> vidas</p>
         </div>
